Still working on fixing shifting divs when :hover changes size of border box.

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -232,7 +232,7 @@ nav a:hover
 	animation-play-state: running; 
 }
 
-.product { margin-left: 10px; }
+.product { margin-left: 10px; position: relative; }
 
 .product h2
 {
@@ -258,10 +258,12 @@ nav a:hover
 	text-align: center;
 	border: 2px solid black;
 	padding: 10px 35px 10px 35px;
+	
 }
 
 .product .purchase-prod:hover
 {
 	border: 4px solid red;
+	position: absolute;
 }
 
